# DataPad

./: .gitignore  EDITOR_FEATURE.md  LICENSE  MCP_CONTEXT_TOOLS.md  README.md  pyproject.toml
src/terminal_db/: config.py  connection_store.py  db_connection.py  db_connection_postgres.py  main.py  query_executor.py  ssh_tunnel.py
src/terminal_db/mcp/: __main__.py  mcp_config.py  server.py
src/terminal_db/ui/: connection_screen.py  query_screen.py  widgets.py
